--- a/portfolioIndex.html
+++ b/portfolioIndex.html
@@ -42,7 +42,7 @@
 	<!---------about Section --------------->
 	<section class="about" id="about">
 		<div class="about-img">
-			<img src="img/about.jpg">
+			<img src="about.jpg">
 		</div>
 
 		<div class="about-text">
@@ -109,7 +109,7 @@
 	</div>
 	<div class="portfolio-content">
 		<div class="row">
-			<img src="img/project1.jpg" >
+			<img src="project1.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -118,7 +118,7 @@
 		</div>
 
 		<div class="row">
-			<img src="img/project2.jpg" >
+			<img src="project2.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -127,7 +127,7 @@
 		</div>
 
 		<div class="row">
-			<img src="img/project3.jpg" >
+			<img src="project3.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -136,7 +136,7 @@
 		</div>
 
 		<div class="row">
-			<img src="img/project4.jpg" >
+			<img src="project4.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -145,7 +145,7 @@
 		</div>
 
 		<div class="row">
-			<img src="img/project5.jpg" >
+			<img src="project5.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
@@ -154,7 +154,7 @@
 		</div>
 
 		<div class="row">
-			<img src="img/project6.jpg" >
+			<img src="project6.jpg" >
 			<div class="layer">
 				<h5>Visual Design</h5>
 				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
